<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="246dp"
        android:layout_height="37dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="91dp"
        android:text="@string/txt_titulo_bajas"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="93dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_id_eliminar"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cajaIdEliminar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/cajaIdEliminar"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="Solo números"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnBajasBuscar"
        android:layout_width="132dp"
        android:layout_height="71dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:onClick="buscarAlumno"
        android:text="@string/btn_buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBajasEliminar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBajasEliminar"
        android:layout_width="123dp"
        android:layout_height="71dp"
        android:layout_marginStart="170dp"
        android:layout_marginBottom="50dp"
        android:onClick="eliminarAlumno"
        android:text="@string/btn_eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBajasRestaurar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBajasRestaurar"
        android:layout_width="126dp"
        android:layout_height="71dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="50dp"
        android:onClick="restablecer"
        android:text="@string/btn_restaurar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBajasEliminar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerEliminar"
        android:layout_width="425dp"
        android:layout_height="651dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBajasBuscar"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>