<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="7dp"
    tools:layout_editor_absoluteY="-13dp">

    <EditText
        android:id="@+id/cajaModificarNombre"
        android:layout_width="303dp"
        android:layout_height="109dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Solo letras"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaModificarNumControl" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="81dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/txt_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="168dp"
        android:layout_height="43dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="131dp"
        android:text="@string/txt_titulo_Modificar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="81dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="105dp"
        android:text="@string/txt_num_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cajaModificarNumControl"
        android:layout_width="303dp"
        android:layout_height="109dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Solo números"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="127dp"
        android:layout_height="69dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:onClick="actualizarDatos"
        android:text="@string/btn_actualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaModificarNombre" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="127dp"
        android:layout_height="69dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="52dp"
        android:onClick="cargarDatos"
        android:text="@string/btn_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaModificarNombre" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerActualizar"
        android:layout_width="425dp"
        android:layout_height="477dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnActualizar" />
</androidx.constraintlayout.widget.ConstraintLayout>